2010-06-10  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/metadata.rb: revice rdoc comments of OCI8::Metadata::Table
	    and OCI8::Metadata::View and delete some unavailable methods
	    of OCI8::Metadata::View.
	* test/test_metadata.rb: add tests for OCI8::Metadata::Table and
	    OCI8::Metadata::View.
	* README: change the description about the privilege to run tests.
	    'create view' privilege is needed to test OCI8::Metadata::View.

2010-06-01  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, ext/oci8/oci8.c, lib/oci8.rb.in: move
	    the location where OCI8::VERSION is defined from oci8.rb to
	    oci8lib_*.so. Add code to check the version of oci8.rb and
	    oci8lib_*.so.
	* test/test_clob.rb: create test_clob table while executing
	    tests.
	* README: delete the instruction to create test_clob before
	    executing tests.

2010-05-17  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/metadata.c: delete OCI8::Metadata::Base's methods which
	    get and set OCI handle attributes.
	* ext/oci8/ocihandle.c: add OCIHandle#attr_get_oradate.
	* lib/oci8/metadata.rb: use OCIHandle#attr_get_* instead of
	    obsolete OCI8::Metadata::Base#__*.

2010-05-07  KUBO Takehiro  <kubo@jiubao.org>
	* dist-files, ext/oci8/.document, ext/oci8/apiwrap.yml,
	  ext/oci8/connection_pool.c, ext/oci8/extconf.rb,ext/oci8/oci8.c,
	  ext/oci8/oci8.h, ext/oci8/oci8lib.c, lib/oci8.rb.in,
	  lib/oci8/.document, lib/oci8/connection_pool.rb, lib/oci8/oci8.rb,
	  lib/oci8/ocihandle.rb: add a new feature OCI8::ConnectionPool.

2010-05-04  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c: fix a bug that a string is bound to RAW,
	    its encoding was convertd to OCI.encoding.
	* ext/oci8/encoding.c: delete an unused strcuture.
	* ext/oci8/oci8.c, ext/oci8/oci8.h, ext/oci8/ocihandle.c,
	    lib/oci8/oci8.rb: do refactering to make it easy to
	    implement new authentication features.
	* lib/oci8.rb.in, lib/oci8/metadata.rb, lib/oci8/ocihandle.rb: